fixed button align, text wrap, limited img size

--- a/src/app/detail/shopping-cart-detail/shopping-cart-detail.component.css
+++ b/src/app/detail/shopping-cart-detail/shopping-cart-detail.component.css
@@ -1,9 +1,31 @@
-#change-btn {
+#delete-btn {
   float: right;
+}
+
+#checkout-btn {
+  position: absolute;
+  right: 0;
 }
 
 .container {
   max-width: 1000px;
   margin-left: auto;
   margin-right: auto;
+  position: relative;
+}
+
+.remove-padding {
+  padding: 0;
+}
+
+.top-m10 {
+  margin-top: 10px;
+}
+
+.top-m5 {
+  margin-top: 5px;
+}
+
+.product-image {
+  max-width: 250px;
 }
